--- a/index.html
+++ b/index.html
@@ -185,7 +185,9 @@
     </div>
 
 </section>
-<script type="text/javascript" src="js/script.js"></script>
+
+<script type="text/javascript" src="./script.js"></script>
+
 </body>
 
 </html>
