--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <p>Dicionário que lista todas as mulheres que fizeram e ainda fazem parte da história do Brasil e mundo.</p>
     </header>
     
-    <section>
+    <section id="content">
+
         <div class="card">
             <img src="../dictionary/imagens/marielle-franco.png" width="150" alt="foto de Marielle Franco, ela tem pele escura,
             usa jaqueta marrom e tem os braços cruzados, olhando para a câmera com determinação.">
