--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         </div>  
         <div class="card">
-            <img src="../dictionary/imagens/lelia-gonzalez.png" width="150" alt="foto preto e branco de Lélia 
+            <img src="../imagens/lelia-gonzalez.png" width="150" alt="foto preto e branco de Lélia 
             Gonzalez, uma mulher preta de cabelo curto e crepo, usa faixa no cabelo e sorriso largo no rosto">
             <details>
                 <summary>Lélia Gonzalez</summary>
@@ -58,7 +58,7 @@
         </div>  
 
         <div class="card">
-            <img src="../dictionary/imagens/angela-davis.png" width="150" alt="foto em preto e branco de 
+            <img src="../imagens/angela-davis.png" width="150" alt="foto em preto e branco de 
             Angela Davis, mulher afro-americana com cabelos negros, crespos e rosto marcantemente angular.">
             <details>
                 <summary>Angela Davis</summary>
@@ -74,7 +74,7 @@
         </div>
 
         <div class="card">
-            <img src="../dictionary/imagens/conceicao-evaristo.png" width="150" alt="">
+            <img src="../imagens/conceicao-evaristo.png" width="150" alt="">
             <details>
                 <summary>Conceição Evaristo</summary>
                 <p>Maria da Conceição Evaristo de Brito nasceu em Belo Horizonte, em 1946. De origem humilde, 
@@ -92,7 +92,7 @@
         </div>  
 
         <div class="card">
-            <img src="../dictionary/imagens/carolina-de-jesus.png" width="150" alt="">
+            <img src="../imagens/carolina-de-jesus.png" width="150" alt="">
             <details>
                 <summary>Carolina de Jesus</summary>
                 <p>Carolina Maria de Jesus foi uma escritora brasileira, conhecida por seu livro Quarto de Despejo: 
@@ -108,7 +108,7 @@
         </div>  
 
         <div class="card">
-            <img src="../dictionary/imagens/rosa-parks.png" width="150" alt="">
+            <img src="../imagens/rosa-parks.png" width="150" alt="">
             <details>
                 <summary>Rosa Parks</summary>
                 <p>Rosa Louise McCauley, mais conhecida por Rosa Parks, foi uma costureira negra norte-americana, símbolo do 
@@ -123,7 +123,7 @@
         </div>  
 
         <div class="card">
-            <img src="../dictionary/imagens/mãe-stella-de-oxóssi.png" width="150" alt="">
+            <img src="../imagens/mãe-stella-de-oxóssi.png" width="150" alt="">
             <details>
                 <summary>Mãe Stella de Oxóssi</summary>
                 <p>Mãe Stella de Oxóssi, cujo nome de batismo era Francisca Gonçalves, nasceu em Salvador, Bahia, em 1925. 
@@ -145,7 +145,7 @@
         </div>  
 
         <div class="card">
-            <img src="../dictionary/imagens/nina-da-hora.png" width="150" alt="">
+            <img src="../imagens/nina-da-hora.png" width="150" alt="">
             <details>
                 <summary>Nina da Hora</summary>
                 <p>Nina da Hora é uma cientista da computação, pesquisadora e ativista brasileira, formada pela Pontifícia 
@@ -164,7 +164,7 @@
         </div>  
 
     <div class="card">
-        <img src="../dictionary/imagens/marina-silva.png" width="150" alt="">
+        <img src="../imagens/marina-silva.png" width="150" alt="">
         <details>
             <summary>Marina Silva</summary>
             <p>Marina Silva é uma política e ambientalista brasileira conhecida por sua luta pela defesa dos 
