--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     <section id="content">
 
         <div class="card">
-            <img src="../imagens/marielle-franco.png" width="150" alt="foto de Marielle Franco, ela tem pele escura,
-            usa jaqueta marrom e tem os braços cruzados, olhando para a câmera com determinação.">
+            <img src="imagens/marielle-franco.png" width="150" alt="foto de Marielle Franco">
             <details>
                 <summary>Marielle Franco</summary>
                 <p>Marielle Francisco da Silva, conhecida como Marielle Franco, foi uma socióloga, feminista, 
@@ -39,8 +38,7 @@
 
         </div>  
         <div class="card">
-            <img src="../imagens/lelia-gonzalez.png" width="150" alt="foto preto e branco de Lélia 
-            Gonzalez, uma mulher preta de cabelo curto e crepo, usa faixa no cabelo e sorriso largo no rosto">
+            <img src="imagens/lelia-gonzalez.png" width="150" alt="foto de Lelia Gonzalez">
             <details>
                 <summary>Lélia Gonzalez</summary>
                 <p>Lélia Gonzalez foi uma intelectual, política, professora e antropóloga brasileira.
@@ -58,8 +56,7 @@
         </div>  
 
         <div class="card">
-            <img src="../imagens/angela-davis.png" width="150" alt="foto em preto e branco de 
-            Angela Davis, mulher afro-americana com cabelos negros, crespos e rosto marcantemente angular.">
+            <img src="imagens/angela-davis.png" width="150" alt="foto de Angela Davis">
             <details>
                 <summary>Angela Davis</summary>
                 <p>Angela Yvonne Davis é uma professora e filósofa socialista estado-unidense que alcançou 
@@ -74,7 +71,7 @@
         </div>
 
         <div class="card">
-            <img src="../imagens/conceicao-evaristo.png" width="150" alt="">
+            <img src="imagens/conceicao-evaristo.png" width="150" alt="foto de Conceição Evaristo">
             <details>
                 <summary>Conceição Evaristo</summary>
                 <p>Maria da Conceição Evaristo de Brito nasceu em Belo Horizonte, em 1946. De origem humilde, 
@@ -92,7 +89,7 @@
         </div>  
 
         <div class="card">
-            <img src="../imagens/carolina-de-jesus.png" width="150" alt="">
+            <img src="imagens/carolina-de-jesus.png" width="150" alt="foto de Carolina de Jesus">
             <details>
                 <summary>Carolina de Jesus</summary>
                 <p>Carolina Maria de Jesus foi uma escritora brasileira, conhecida por seu livro Quarto de Despejo: 
@@ -108,7 +105,7 @@
         </div>  
 
         <div class="card">
-            <img src="../imagens/rosa-parks.png" width="150" alt="">
+            <img src="imagens/rosa-parks.png" width="150" alt="foto de Rosa Parks">
             <details>
                 <summary>Rosa Parks</summary>
                 <p>Rosa Louise McCauley, mais conhecida por Rosa Parks, foi uma costureira negra norte-americana, símbolo do 
@@ -123,7 +120,7 @@
         </div>  
 
         <div class="card">
-            <img src="../imagens/mãe-stella-de-oxóssi.png" width="150" alt="">
+            <img src="imagens/mãe-stella-de-oxóssi.png" width="150" alt="foto de Mãe Stella de Oxóssi">
             <details>
                 <summary>Mãe Stella de Oxóssi</summary>
                 <p>Mãe Stella de Oxóssi, cujo nome de batismo era Francisca Gonçalves, nasceu em Salvador, Bahia, em 1925. 
@@ -145,7 +142,7 @@
         </div>  
 
         <div class="card">
-            <img src="../imagens/nina-da-hora.png" width="150" alt="">
+            <img src="imagens/nina-da-hora.png" width="150" alt="foto de Nina da Hora">
             <details>
                 <summary>Nina da Hora</summary>
                 <p>Nina da Hora é uma cientista da computação, pesquisadora e ativista brasileira, formada pela Pontifícia 
@@ -164,7 +161,7 @@
         </div>  
 
     <div class="card">
-        <img src="../imagens/marina-silva.png" width="150" alt="">
+        <img src="imagens/marina-silva.png" width="150" alt="foto de Marina Silva">
         <details>
             <summary>Marina Silva</summary>
             <p>Marina Silva é uma política e ambientalista brasileira conhecida por sua luta pela defesa dos 
